2006-10-12  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/framework-ps.scm (dump-stencil-as-EPS): fix thinkos.

	* scm/lily.scm (type-p-name-alist): add rhythmic-location? type name.

	* Documentation/topdocs/NEWS.tely (Top): doc new clipping feature

	* input/regression/clip-systems.ly (Notes): new file. 

	* scm/lily.scm (define-scheme-options): add clip-systems option.

	* scm/framework-ps.scm (dump-stencil-as-EPS-with-bbox): new
	function
	(dump-stencil-as-EPS): move bbox calculation from previous
	dump-stencil-as-EPS
	(output-framework): use -dclip-systems 

	* scm/lily-library.scm (filtered-map): new function

	* scm/framework-ps.scm (clip-system-EPS): new function.
	(clip-system-EPSes): new function.

	* lily/paper-column.cc: add rhythmic-location to interface

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	rhythmic-location property.

	* scm/clip-region.scm: new file: rhythmic-location data type and
	system-clipped-x-extent function.

	* ly/init.ly: use (scm clip-region)

	* lily/paper-column-engraver.cc (stop_translation_timestep): set
	rhythmic-location for paper column grobs.

	* lily/grob-scheme.cc (LY_DEFINE): minor cleanup

2006-10-12  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/engraver-init.ly: Remove obsolete comment on
	Bar_number_engraver.

	* Documentation/user/instrument-notation.itely: Tune Ancient
	Articulations figure, such that the episem actually shows.

2006-10-12  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ {some}: minor edits that were lost somehow.

2006-10-12  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): bump version.

	* input/regression/lyric-tie.ly (texidoc): new file.

	* Documentation/topdocs/NEWS.tely (Top): add new feature.

	* lily/general-scheme.cc (LY_DEFINE): elucidate docstring.

	* scm/define-markup-commands.scm (tied-lyric): new function: split
	string along ~ and reattach with U+203F (tie character) and
	negative space.
